Fix mobile nav not showing on moble

--- a/resources/css/core/layout.css
+++ b/resources/css/core/layout.css
@@ -47,6 +47,10 @@ main {
     transition: all 0.3s ease-in-out;
 }
 
+.nav-closed main {
+    @apply ps-0;
+}
+
 
 
 .nav-closed .nav-main {
